alpm-types/src/snapshots/checksum::checksum_parse_error@case_2_incomplete_pair.snap
---
source: alpm-types/src/checksum.rs
---
error: invalid hash digest
 | 
 |  b 
 | ^ expected ASCII hex digit
 | 
 = while parsing:
   checksum: ( b )
   → invalid hash digest
   → Expected a hex SHA-512 hash digest consisting of 64 bytes.
   → expected ASCII hex digit
