alpm-types/src/snapshots/env::installed_new_parse_error@case_3_missing_rel_and_arch.snap
---
source: alpm-types/src/env.rs
---
error: invalid alpm-package file name
 | 
 | foo-1:1.0.0_any
 | ^
 | 
 = while parsing:
   installed package name: (foo-1:1.0.0_any)
   → invalid alpm-package file name
   → Expected a package name, followed by an alpm-package-version (full or full with epoch) and an alpm-architecture.
     All components must be delimited with a dash ('-').
