alpm-types/src/snapshots/env::invalid_build_environment_option@case_2.snap
---
source: alpm-types/src/env.rs
---
error: invalid build environment option
 | 
 | #somethingelse
 | ^ expected one of: `!`, ASCII alphanumeric character, `-`, `.`, `_`, `!`
